--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-certifi==2022.12.7
-charset-normalizer==2.1.1
-cloudscraper==1.2.66
-idna==3.4
-pyparsing==3.0.9
-python-slugify==7.0.0
-requests==2.28.1
-requests-toolbelt==0.10.1
-text-unidecode==1.3
-urllib3==1.26.13
+asgiref==3.6.0
+Django==3.2.16
+pytz==2022.7
+sqlparse==0.4.3
+typing-extensions==4.4.0
