--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,20 @@ Django==3.2.16
 pytz==2022.7
 sqlparse==0.4.3
 typing-extensions==4.4.0
+asgiref==3.6.0
+Django==3.2.16
+django-dotenv==1.4.2
+psycopg2==2.9.5
+python-decouple==3.6
+pytz==2022.7
+sqlparse==0.4.3
+typing_extensions==4.4.0
+tzdata==2022.7
+asgiref==3.6.0
+Django==3.2.16
+django-dotenv==1.4.2
+psycopg2==2.9.5
+pytz==2022.7
+sqlparse==0.4.3
+typing_extensions==4.4.0
+tzdata==2022.7
